This is the previous commit but its actuallystaged

--- a/home/static/global.css
+++ b/home/static/global.css
@@ -8,10 +8,10 @@
     --energy: #00EFEF; 
     --color-4: #274F36;
     --color-2: #006242;
-    --color-3: #e6d266;
+    --color-3: #CFB53B;
     --color-5: #FFFFFF;
     --color-1: #ECECEC;
-    --color-6: #F5C13D;
+    --color-6: #daab36;
 }
 
 html, body {
